tab header + spacing fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,13 @@
     color: white;
 
     i {
-        font-size: 2rem;
+        font-size: 1rem;
+        margin-bottom: .5rem;
+    }
+
+    span {
+        font-family: 'JetBrains Mono';
+        font-size: 1rem;
     }
 
     &:first-child {
